[tool.poetry]
name = "ProcessScheduler"
version = "2.1.0"
description = "A Python package for automatic and optimized resource scheduling"
license = "GPL-3.0-or-later"
authors = ["Thomas Paviot <tpaviot@gmail.com>"]
packages = [{include = "processscheduler"}]
readme = "README.md"
homepage = "https://processscheduler.github.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
z3-solver = "==4.14.0.0"
pydantic = ">=2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
